# shapewarping

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  README_.md  pyproject.toml  tmp_source.urdf  tmp_target.urdf
data/pcas/: 230315_boxes_scale_pca_8_dim_alp_0_01.pkl  230315_ndf_bottles_scale_pca_8_dim_alp_0_01.pkl  230315_ndf_bowls_scale_pca_8_dim_alp_0_01.pkl  230315_ndf_mugs_scale_pca_8_dim_alp_0_01.pkl  230315_ndf_trees_scale_pca_8_dim_alp_0_01.pkl  230315_simple_trees_scale_pca_8_dim_alp_0_01.pkl  230328_ndf_bottles_scale_pca_8_dim_alp_0_01.pkl
data/training/boxes/test/: 0.stl  0.urdf  1.stl  10.stl  10.urdf  11.stl  11.urdf  12.stl  12.urdf  13.stl  14.stl  14.urdf  15.stl  15.urdf  16.stl  16.urdf  17.stl  18.stl  18.urdf  19.stl  19.urdf  2.stl  3.stl  3.urdf  4.stl  5.stl  5.urdf  6.stl  7.stl  8.stl  9.stl  9.urdf
data/training/boxes/train/: 1.urdf  10.stl  11.stl  12.stl  13.stl  13.urdf  14.stl  15.stl  16.stl  17.stl  17.urdf  18.stl  19.stl  2.stl  (+12 more)
data/training/simple_trees/: 0.stl  0.urdf  1.stl  1.urdf  2.stl  2.urdf  3.stl  3.urdf  4.stl  4.urdf  5.stl  5.urdf  6.stl  6.urdf  7.stl  7.urdf  8.stl  8.urdf  9.stl  9.urdf
shapewarping/: learn_warp.py  run_rndf.py  run_warp.py  show_warp.py
shapewarping/lib/: demo.py  ndf_interface.py  object_warping.py  utils.py  viz_utils.py
shapewarping/tests/: test_learn_warp.py
shapewarping/tests/data/: box_0.stl  box_0.urdf  box_1.stl  box_1.urdf
shapewarping/tests/lib/: test_object_warping.py  test_utils.py
shell_scripts/: learn_warp.sh  run_rndf_10_demo.sh  run_rndf_1_demo.sh  run_rndf_5_demo.sh  run_warp_10_demo_pick.sh  run_warp_1_demo.sh  run_warp_1_demo_mug_tree_ablations.sh  run_warp_5_demo_pick.sh
v-hacd/app/: testVHACD
(+3 files in other folders)
