[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shapewarping"
version = "1.0.0"
description = "Source code for One-shot Imitation Learning via Interaction Warping"
authors = [
  { name = "Ondrej Biza", email = "ondrej.biza@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
requires-python = ">=3.7"
dependencies = [
  "cycpd",
  "meshcat",
  "numpy==1.26.4",
  "open3d",
  "pybullet==3.1.3",
  "pyglet==1.5.31",
  "scikit-learn",
  "scipy",
  "torch==1.12.1",
  "torchvision==0.13.1",
  "trimesh==3.10.7",
]

[project.urls]
"Homepage" = "https://shapewarping.github.io"
"Code" = "https://github.com/ondrejbiza/shapewarping"
"Paper" = "https://arxiv.org/abs/2306.12392"
